basic structure is done

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="">
-  <title>Document</title>
+  <title>Adalab</title>
+  <link rel="stylesheet" href="./scss/main.scss">
+  <link rel="stylesheet" href="./public/images">
+ 
 </head>
 <body>
-  
+    <load src="./partials/header.html" />
+    <load src="./partials/body.html" />
+    <load src="./partials/footer.html" />
 </body>
-</html>
-
+</html> 
